--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,5 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(0, 0, 0, 0.25);
+    background: #141414;
+    position: relative;
+    z-index: 1;
 }
