--- a/src/components/wheel/WheelMainContainer.css
+++ b/src/components/wheel/WheelMainContainer.css
@@ -1,4 +1,4 @@
-#mainContainer {
+#wheelMainContainer {
     width: max(50%, 500px);
     height: 520px;
     flex-shrink: 0;
@@ -7,25 +7,25 @@
 }
 
 @media (max-width: 1000px) {
-    #mainContainer {
+    #wheelMainContainer {
         width: 100%;
     }
 }
 
-#mainImage {
+#wheelMainImage {
     width: 1200px;
     position: absolute;
     top: -700px;
     left: 0;
 }
 
-#arrowImage {
+#wheelArrowImage {
     position: absolute;
     left: 130px;
     bottom: 150px;
 }
 
-#mainBlur {
+#wheelMainBlur {
     position: absolute;
     top: 0;
     width: 100%;
