--- a/src/components/LastGames.css
+++ b/src/components/LastGames.css
@@ -1,45 +1,35 @@
 #lastGamesSection {
-    margin: 28px;
-    width: calc(100% - 56px);
+    margin: 1.5rem;
+    width: calc(100% - 3rem);
     position: relative;
 }
 
 #lastGamesContainer {
-    margin-top: 20px;
-    min-height: 100px;
+    margin-top: 1rem;
+    min-height: 5rem;
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(auto-fit, 100px);
-    gap: 20px;
-}
-
-@media (max-width: 500px) {
-    #lastGamesContainer {
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    }
-
-    .lastGameCard {
-        min-width: 360px;
-    }
+    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+    grid-template-rows: repeat(auto-fit, 7rem);
+    gap: 1rem;
 }
 
 .lastGameCard {
-    padding: 20px;
-    min-width: 160px;
-    max-width: 480px;
-    height: 60px;
+    padding: 1rem;
+    min-width: 10rem;
+    max-width: 30rem;
+    height: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 24px;
+    border-radius: 1.5rem;
     box-shadow: #FFFFFF20 0px 0px 20px;
     position: relative;
 }
 
 .lastGameCardColorInfo {
-    width: 60px;
-    height: 20px;
+    width: 4rem;
+    height: 1.5rem;
     border: solid 2px #FFFFFF;
     border-radius: 8px;
 }
