--- a/src/RegisterPageApp.css
+++ b/src/RegisterPageApp.css
@@ -7,38 +7,5 @@
     align-items: center;
     background: radial-gradient(#1A1A1A, #2C2C2C);
     z-index: 0;
-}
-
-
-
-.bgCircle {
-    position: absolute;
-    background: radial-gradient(#408CFF, #823891 70%);
-    border-radius: 1000px;
-    filter: blur(20px);
-    z-index: -1;
-}
-
-.little {
-    width: 10dvw;
-    height: 10dvw;
-    animation: bgCircleAnim 7s infinite;
-}
-
-.medium {
-    width: 15dvw;
-    height: 15dvw;
-    animation: bgCircleAnim 9s infinite;   
-}
-
-.large {
-    width: 20dvw;
-    height: 20dvw;
-    animation: bgCircleAnim 11s infinite;
-}
-
-@keyframes bgCircleAnim {
-    50% {
-        translate: 0px 30px;
-    }
+    contain: paint;
 }
